Update omar-common-properties.gradle